# midas_hand_api

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  setup_dynamixel_latency.sh
docs/: index.html  midas_hand_api.html  paxini_notes.md  search.js
docs/midas_hand_api/: config.html  hand.html  homing.html  kinematics.html
docs/midas_hand_api/actuators/: dynamixel_client.html
docs/midas_hand_api/tactile/: paxini.html
examples/: README_paxini_qt_replay.md  Read_Hand_Paxini_HighSpeed.py  Read_Single_Sensor_Hand.py  Read_Single_Sensor_Usb.py  demo.py  finger_touch.py  kapandji_test.py  paxini_live_plotly_viewer.py  phased_finger_curl.py  read_calibrated_joint_positions.py  read_paxini_tactile.py  recalibrate_tactile.py  record_paxini_tactile.py  replay_paxini_recording_qt.py  set_finger_compliance.py  smoke_test.py
midas_hand_api/: __init__.py  __main__.py  config.py  control_table.py  dynamixel_client.py  fourbar_lookup.py  hand.py  homing.py  kinematics.py
midas_hand_api/actuators/: __init__.py  control_table.py  dynamixel_client.py
midas_hand_api/assets/: paxini_fingertip_15mm_52pts.csv  paxini_fingertip_26mm_127pts.csv  pip_dip_linkage_lookup.csv
midas_hand_api/tactile/: README_paxini_qt_replay.md  __init__.py  paxini.py  paxini_qt_visualizer.py  paxini_tactile_qt.py  paxini_visualizer.py
tests/: test_kinematics.py  test_motion_profile.py
