[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "midas-hand"
version = "0.1.0"
description = "Python API for the Midas robotic hand"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "dynamixel-sdk>=4.0.3",
    "numpy>=2.0",
    "pyyaml>=6.0",
]

[project.scripts]
midas-hand = "midas_hand_api.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["midas_hand_api*"]
