[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "midas-hand"
version = "0.1.0"
description = "Python API for the Midas robotic hand"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "dynamixel-sdk>=4.0.3",
    "numpy>=2.0",
    "pyserial>=3.5",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
qt = [
    "pyqtgraph>=0.13.7",
    "PyQt6>=6.6",
]

[project.scripts]
midas-hand = "midas_hand_api.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["midas_hand_api*"]

[tool.setuptools.package-data]
midas_hand_api = ["assets/*.csv"]

[tool.pytest.ini_options]
pythonpath = ["."]
